--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -1,10 +1,9 @@
 .card-bravado {
     background: #FAFAFA;
-    border: 1px solid #4765FF;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
-    border-radius: 3px;
     position: relative;
     margin: 10px;
+    border-radius: 3px;
 
     img {
         &.robot-avatar {
@@ -21,6 +20,9 @@
             line-height: 16px;
             text-align: center;
             color: #009688;
+            padding: 5px;
+            text-decoration: none;
+            cursor: pointer;
         }
     }
 
@@ -89,4 +91,14 @@
 
 .highlighted {
     background-color: #f48f42;
+}
+
+.selected-robots {
+    background: #FAFAFA;
+    border: 1px solid #4765FF;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+    border-radius: 3px;
+    width: 564px;
+    margin: 0 auto;
+    background-color: white;
 }
