--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,2 +1,4 @@
 $background-color: #EEEEEE;
-$highlighted-color: #ffd54f;
+$highlighted-color: yellow;
+$robots-section-color: white;
+$robot-card-color: #FAFAFA;
