--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,11 @@
 @import 'colors.scss';
+@import 'fonts.scss';
 @import './components/card.scss';
 @import './components/input.scss';
 
 html, body, main {
   background: $background-color;
-}
+  overflow-y: hidden;
+} 
 
 @import '~bootstrap/scss/bootstrap';
