--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -9,17 +9,6 @@
     height: 643px;
 }
 
-.selected-robots-section {
-    background: $robot-card-color;
-    border: 1px solid #4765FF;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
-    border-radius: 3px;
-    background-color: $robots-section-color;
-}
-
-.unselected-robots-section {
-    background-color: $robots-section-color;
-}
 
 .highlighted-text { 
     background-color: $highlighted-color;
@@ -31,6 +20,10 @@
     position: relative;
     border-radius: 3px;
     margin-bottom: 10px;
+
+    &.selected {
+        border: 1px solid #4765FF;
+    }
 
     img {
         &.robot-avatar {
